avance de readme

--- a/eda/eda.ipynb
+++ b/eda/eda.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "En este informe analizaremos la accidentalidad de Buenos aires, argentina, para esto analizaremos una base de datos con información sobre 696 accidentes ocurridos en La Ciudad Autónoma de Buenos Aires (CABA), de los cuales se cuenta con 717 victimas fatales en estos accidentes.  \n",
     "\n",
-    "CABA cuenta con  una población aproximada de  $2.890.151$, dividida en $15$ comunas, de la cuales cada comuna tiene entre $1$ a $5$ barrios cada una. Ademas las vias se dividen en **'AVENIDA'**, **'GRAL PAZ'**, **'CALLE'** y  **'AUTOPISTA'**\n",
+    "CABA cuenta con  una población aproximada de  $3 120 612$, dividida en $15$ comunas, de la cuales cada comuna tiene entre $1$ a $5$ barrios cada una. Ademas las vias se dividen en **'AVENIDA'**, **'GRAL PAZ'**, **'CALLE'** y  **'AUTOPISTA'**\n",
     "\n",
     "- En la mayoria de los casos tenemos información sobre la edad, sexo y fecha de fallecimiento de la victima y fecha del accidente.\n",
     "\n",
